# deal-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.MD  LICENSE  README.MD  docker-compose.yml  pyproject.toml
backend/: Dockerfile  __init__.py  db.py  drive.py  gdrive_sa.json  gdrive_sa.json.example  gdrive_script.py  main.py  parsing.py  routes.py  schemas.py
frontend/: Dockerfile  app.py
tests/: test_api.py  test_parsing.py
